# ranex-framework

./: .gitignore  .windsurfrules  AUDIT_REPORT.md  CHANGELOG.md  FIXES_COMPLETE.md  INSTALLATION.md  LICENSE  MCP_SETUP.md  QUICK_START.md  README.md  STRUCTURE.md  install.sh  maturin.toml  mcp_config.json  pyproject.toml  ranex-cli  run_tests.sh  setup.py  setup_dev.sh
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: README.md  WORKFLOWS.md  ci.yml  get-action-shas.sh  release-check.yml  security.yml
.ranex/: config.toml  rag.db  workflow.toml
.ranex/attestations/: d27e5c12-7569-4e2a-b130-a63ba8fde7d9.json
.ranex/logs/: cli_20251201.jsonl
app/: README.md  main.py  requirements.txt
app/commons/: contract_middleware.py  database.py  email_utils.py  metrics.py  my_secret_math.py  rate_limiter.py  root_dirty_hack.py  security.py
app/features/demo/: state.yaml
app/features/payment/: service.py  state.yaml
docs/: 00-INDEX.md  01-INSTALLATION.md  02-QUICKSTART.md  03-CONFIGURATION.md  10-STATE-MACHINE.md  11-CONTRACT-DECORATOR.md  12-SECURITY-SCANNING.md  13-ARCHITECTURE.md  14-IMPORT-VALIDATION.md  15-DATABASE.md  20-CLI-REFERENCE.md  21-MCP-TOOLS.md  22-PYTHON-API.md  30-PROJECT-STRUCTURE.md  31-DEVELOPMENT-WORKFLOW.md  32-TESTING.md  33-FASTAPI-INTEGRATION.md  34-FASTAPI-QUICKSTART.md  40-TROUBLESHOOTING.md  41-FAQ.md  42-UPGRADE-TO-TEAM.md  AI_INTEGRATION_GUIDE.md  API_REFERENCE.md  CI_CD.md  CURSOR_MCP_SETUP.md  FASTAPI_INTEGRATION.md  FEATURES.md  ML_SECURITY_FEATURES.md  QUICKSTART.md  TESTING.md  TESTING_COMMANDS.md
docs/security/: README.md  SBOM.md  SECURITY_AUDIT.md  THREAT_MODEL.md
docs/setup/: .gitkeep  MCP_SETUP.md  QUICK_REFERENCE.md
docs/specs/: 001_auth_system_reqs.md  001_subscription_reqs.md  001_test_feature_reqs.md  002_subscription_design.md  002_test_feature_design.md
examples/: README.md  antipattern_demo.py  basic_contract.py  circular_imports_demo.py  cli_demo.sh  database_schema_demo.py  dependency_scan_demo.py  fastapi_contract_demo.py  fastapi_middleware_demo.py  ffi_validation_demo.py  import_validation_demo.py  intent_airlock_demo.py  layer_enforcement_demo.py  schema_validation_demo.py  security_scan_demo.py  semantic_atlas_demo.py  sql_validation_demo.py  state_machine_demo.py  structure_enforcement_demo.py  unified_security_demo.py  workflow_management_demo.py
examples/fastapi_demo/: README.md
ranex/: __init__.py  cli.py  errors.py  simulation.py  templates.py
scripts/: verify_installation.sh
scripts/test/: verify_structure.sh
tests/: README.md  test_contract.py  test_state_machine.py
tests/simulations/: test_feature_flow.yaml
wheels/: INSTALL.md  README.md
(+21 files in other folders)
